# EmailTriage

./: .env.example  .gitignore  CLAUDE.md  README.md  bootstrap.ps1  pyproject.toml  requirements.txt
core/: categories.yaml  chat_api.py  classifier.py  db.py  email_assistant.py  i18n.py  ingest.py  outlook.py  process.py  seed_demo.py
dashboard/: app.py
docs/: outlook-setup.md
skill/: SKILL.md
tests/: test_claude_feature.py  test_dashboard.py
