[project]
name = "email-triage"
version = "0.1.0"
description = "Local AI email triage — classify, summarize, draft, dashboard."
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "msal>=1.24",
    "requests>=2.28",
    "python-dotenv>=1.0",
    "deep-translator>=1.11.4",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "playwright>=1.59.0",
    "pytest>=9.0.3",
    "pytest-playwright>=0.7.2",
]
